force-app/main/default/objects/vlocity_cmt__Application__c/vlocity_cmt__Application__c.object-meta.xml
<CustomObject>
    <description>Represents a submission of an application for products or services made by an individual, group of individuals or organization.</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>