force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Address1__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Address1__c</fullName>
    <description>Additional address information 1 of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Street Supplement 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>