force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Address2__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Address2__c</fullName>
    <description>Additional street address information 2 of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Street Supplement 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>