force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__ApplicationTemplateId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ApplicationTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>vlocity_cmt__ApplicationTemplate__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>