force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__City__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__City__c</fullName>
    <description>City of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>