force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Content__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>