force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Country__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Country__c</fullName>
    <description>Country of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>