force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Floor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Floor__c</fullName>
    <description>The floor in a building of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>