force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Geolocation__c</fullName>
    <description>Geolocation of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>