force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__HouseNumberSupplement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HouseNumberSupplement__c</fullName>
    <description>House number supplement of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>House Number Supplement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>