force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PostalCode__c</fullName>
    <description>Postal code of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>