force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__ScreeningResult__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ScreeningResult__c</fullName>
    <label>Screening Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>