force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__ServicePointId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServicePointId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Point that is the topic of an Application.</description>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>