force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__State__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__State__c</fullName>
    <description>State or Province of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>