force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StreetAddress__c</fullName>
    <description>Street address of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>