force-app/main/default/objects/vlocity_cmt__Application__c/fields/vlocity_cmt__UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UnitNumber__c</fullName>
    <description>Unit / Apartment number of the address that is the topic of an Application (If no Premises is identified).</description>
    <label>Unit / Apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>