force-app/main/default/objects/vlocity_cmt__Application__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Type__c</columns>
    <columns>vlocity_cmt__ApplicationReferenceNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>